first steps to deploy on jboss made